deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nomarkup
  labels:
    app.kubernetes.io/part-of: nomarkup
